--- a/Mascarinas-Activity3/package.json
+++ b/Mascarinas-Activity3/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mascarinas-activity1",
+  "name": "mascarinas-activity3",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "mascarinas-activity3": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
